--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p>We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.</p>
               </li>
             </ol>
-            <a class="hero-button features-button" href="#">Create your plan</a>
+            <a class="hero-link features-button" href="#">Create your plan</a>
 
           </section>
         </main>
